Add a Number Formatter

--- a/TrackMix/Base.lproj/MainMenu.xib
+++ b/TrackMix/Base.lproj/MainMenu.xib
@@ -695,6 +695,10 @@
                         <rect key="frame" x="42" y="319" width="96" height="21"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" alignment="center" title="5" bezelStyle="round" id="eSb-Gi-0Uo">
+                            <numberFormatter key="formatter" formatterBehavior="custom10_4" numberStyle="decimal" formatWidth="-1" minimumIntegerDigits="1" maximumIntegerDigits="2000000000" maximumFractionDigits="2" id="4ga-kf-Loo">
+                                <real key="minimum" value="0.0"/>
+                                <real key="maximum" value="10"/>
+                            </numberFormatter>
                             <font key="font" usesAppearanceFont="YES"/>
                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
